--- a/ToDoQueryService/src/main/resources/application.yml
+++ b/ToDoQueryService/src/main/resources/application.yml
@@ -1,6 +1,11 @@
-spring.jpa.hibernate.ddl-auto=create
-spring.datasource.url=jdbc:mysql://localhost:3306/mydb
-spring.datasource.username=matthias
-spring.datasource.password=matthias
+spring:
+  jpa:
+    hibernate:
+      ddl-auto: create
+  datasource:
+    url: jdbc:mysql://localhost:3306/mydb
+    username: matthias
+    password: matthias
 
-server.port=9082
+server:
+  port: 9082
