--- a/ToDoServiceRegistry/.gitignore
+++ b/ToDoServiceRegistry/.gitignore
@@ -1,5 +1,6 @@
 target/
 !.mvn/wrapper/maven-wrapper.jar
+*mvn*
 
 ### STS ###
 .apt_generated
@@ -8,6 +9,7 @@ target/
 .project
 .settings
 .springBeans
+.sts4-cache
 
 ### IntelliJ IDEA ###
 .idea
@@ -22,3 +24,5 @@ nbbuild/
 dist/
 nbdist/
 .nb-gradle/
+
+.mvn
